fix: remove contract id from failed ContractFunctionResult added tests
Signed-off-by: Glib Kozyryatskyy <glib.k@swirldslabs.com>